Issue #108 Bug          - lists.php fails to load after MailWatch update testing
Issue #109 Bug          - Documentation tab present after MailWatch update testing
Issue #110 Bug          - Bring MailWatch conf.php to latest version
Issue #111 Bug          - MailWatch.pm Errors after adding password fetch code

-----
Imageceberus updated to version 1.1
Pyzor updated to version 0.7.0
Webmin updated to 1.690
Mailwatch updated to snapshot 74f18e2742

############################################################
EFA Version 3.0.0.4 Changes
############################################################

Issue #65 Bug - Fix EFA-SA-Update file location
Issue #63 Bug - Remove old kam.cf.backup from spamassasin directory
Issue #18 Bug - Email signature sanitation (avoid duplicate signatures)

############################################################
EFA Version 3.0.0.3 Changes
############################################################

Issue #62 Bug - Add perl-Compress-Raw-Zlib to fix failed build in previous versions
Issue #60 Bug - kam.cf.backup parsed by spamassassin
Issue #61 Bug - Domain Administrator cannot delete domain only whitelist/blacklist
Issue #30 Enhancement - Filter non-spam from quarantine reports
Issue #56 Enhancement - Add yum update exclusions
Issue #55 Bug - Kernel Update from yum update breaks vmware-tools (open-vm-tools)
Issue #48 and #47 Bug - MailWatch update to include lists.php typo and Release All bugs
Issue #53 Bug - Fix postfix queue directories after yum update
Issue #17 Enhancement - Trusted Networks Support for learn-msg.cgi
Issue #16 Enhancement - Automated Backup of MySQL and Settings
Issue #12 Enhancement - Improved handling of transport file with EFA-Configure

############################################################
EFA Version 3.0.0.2 changes
############################################################

Issue #44 Bug - Urgent: learn-msg.cgi broken Insert EFA database password back into script